# openwrt-bbmd-bip

./: .gitignore  .gitmodules  AGENTS.md  CONTEXT.md  Config.in  Makefile  README.md  handover.md
.github/workflows/: build.yml  release.yml
docs/: certificates.md  config-guide.md  fsd.md  install-guide.md  roadmap.md
docs/adr/: adr-001-bacnet-stack-selection.md  adr-002-websocket-tls-selection.md  adr-003-package-structure.md  adr-004-certificate-management.md  adr-005-router-as-hub-node-telemetry.md
docs/agents/: domain.md
files/: bbmd.config  bbmd.init  cert-gen.sh
luci/: Makefile
luci/htdocs/luci-static/resources/view/bbmd/: config.js  status.js
luci/root/etc/uci-defaults/: 40_bbmd-luci
luci/root/usr/share/luci/menu.d/: luci-app-bbmd.json
luci/root/usr/share/rpcd/acl.d/: luci-app-bbmd.json
src/: CMakeLists.txt  bbmd.c  bbmd_bip.c  bbmd_bip.h  bbmd_bridge.c  bbmd_bridge.h  bbmd_config.c  bbmd_config.h  bbmd_hub.c  bbmd_hub.h  bbmd_node.c  bbmd_node.h  bbmd_telemetry.c  bbmd_telemetry.h
